Fixed icon visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -291,12 +291,19 @@ img {
   margin-top: var(--grid-column-gap);
 }
 
-.perculiarities-icon {
+.icon-container {
+  display: inline-block;
+  width: 100%;
+
   outline: 1px solid black;
   background-color: var(--perculiarities-bg);
 
   padding: 25px 100px;
   margin-bottom: 30px;
+}
+
+.perculiarities-icon {
+  fill: currentColor;
 }
 
 .peculiarities-title {
